# projeto_rh_multi_agentes

./: .env.example  .env_exemplo  .gitignore  GUIA_RAPIDO.md  RAG_Comparison.md  README.md  STREAMLIT_README.md  agent_Basic.py  agent_rh_4_agentes.py  agent_with_rag_example.py  app_streamlit.py  guardrails.py  langgraph copy.json  pyproject.toml  requirements.txt  run_agent.bat  run_agent.py  run_completo.bat  run_completo.ps1  run_completo.sh  run_streamlit.bat  start_langgraph.bat  stop_services.sh
.kiro/hooks/: post-impl-security.kiro.hook  security-code-review.kiro.hook
.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
Documentacao/: Base_conhecimento.md  COMO_EXECUTAR.md  INTEGRACAO_HIBRIDA.md  ROADMAP_IMPLEMENTACAO.md  brainstorm.md  criticas.md
RAG/ambulatorio/: atestados.txt  horarios.txt
RAG/beneficios/: Plano_beneficio_concessao.txt  plano_saude.txt  vale_refeicao.txt
RAG/ferias/: ferias_dataser - Sheet1.csv
RAG/folha_pagamento/: ferias.txt  salario.txt
RAG/seguranca/: acidentes.txt  epis.txt
arquitetura/: arquitetura_solucao.md
prompts/: agente_ferias.md  benefits_agent.md  classifier.md  clinic_agent.md  initial_router.md  payroll_agent.md  query_rewriter.md  receptionist.md  safety_agent.md  vacation_agent.md
