[project]
name = "langgraph-agent-v"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langgraph",
    "langchain-openai",
    "pydantic",
    "langgraph-cli[inmem]",
    "chromadb",
    "langchain-chroma",
    "langchain-community",
]
