[project]
name = "langgraph-agent-v"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-openai",
    "langfuse",
    "langgraph",
    "langgraph-cli[inmem]",
    "pydantic",
    "python-dotenv",
    "pytz",
    "streamlit",
]
